[project]
name = "FullControlCustom"
version = "0.1.1"
authors = [
  {name = "Lewis Wright", email="L.Wright4@lboro.ac.uk"}
]

requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
  "plotly",
  "pydantic<2.0",
  "numpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fullcontrol", "lab"]

[project.urls]

"Repository" = "https://github.com/LewisWright161/FullControlCustom"
